# chthonic

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: list_modules.rs  mod.rs  run_module.rs  set_option.rs  show_options.rs  use_module.rs
src/core/: database.rs  event_bus.rs  logger.rs  mod.rs  module_handler.rs  session_manager.rs
src/lib/: mod.rs  theme.rs
src/modules/: mod.rs
src/modules/auxiliary/: http_header_injection.rs  mod.rs  port_scanner.rs  sql_injection.rs
src/modules/exploits/: mod.rs  test_exploit.rs
src/utils/: helpers.rs  mod.rs  theme.rs
