[package]
name = "chthonic"
version = "0.1.0"
edition = "2021"

# احذف هذه الأسطر إذا موجودة:
# [lib]
# name = "chthonic"
# path = "src/lib.rs"

[[bin]]
name = "chthonic"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1" # أضف هذا السطر
colored = "3.0.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
regex = "1.9"
scraper = "0.19.0"
url = "2.5.0"
